[tool.poetry]
name = "stream-scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
google-api-python-client = "^2.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
